--- a/code/AndroidStudioProjects/MyApplication/app/build.gradle
+++ b/code/AndroidStudioProjects/MyApplication/app/build.gradle
@@ -1,25 +1,42 @@
 //app模块的gradle构建脚本，这个文件指定项目构建的相关配置
 apply plugin: 'com.android.application'
+/*
+第一行应用了一个插件,一般有两种值可以选:
+1:com.android.application表明这是一个应用程序模块
+2:com.android.library表明这是一个库模块
+一个是可以直接运行,一个只能作为代码库依附于别的应用程序模块运行
+*/
 
 android {
-    compileSdkVersion 26
-    defaultConfig {
-        applicationId "com.example.fourous.myapplication"
-        minSdkVersion 15
+    compileSdkVersion 26//指定编译版本
+    //buildtoolversion指明项目构建工具的版本
+    defaultConfig {//项目的更多细节进行配置
+        applicationId "com.example.fourous.myapplication"//这里修改包名
+        minSdkVersion 15//最低兼容版本
         targetSdkVersion 26
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
     }
-    buildTypes {
+    buildTypes {//生成的安装文件的相关配置,通常会有两个子闭包
+        //一个是debug,一个是release
+        /*debug生成测试版安装文件配置,release生成正式版安装文件配置*/
         release {
-            minifyEnabled false
+            minifyEnabled false //用于指定是否对项目代码进行混淆,false代表不混淆
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+        //制定混淆时使用的规则文件
+        /*proguard-android.txt是Androidsdk目录下的所有项目通用文件,proguard-rules.pro是当前项目根目录,
+        特有的混淆规则*/
         }
+
+
     }
 }
 
 dependencies {
+    /*
+
+    */
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation 'com.android.support:appcompat-v7:26.1.0'
     implementation 'com.android.support.constraint:constraint-layout:1.0.2'
